<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="130dp">


        <ImageView
            android:id="@+id/iv_photo"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_sno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/label_sno"/>
                <TextView
                    android:id="@+id/txt_sno"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/label_class"/>
                <TextView
                    android:id="@+id/txt_class"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


   <RadioGroup
       android:id="@+id/radioGroup"
       android:layout_width="match_parent"
       android:layout_height="25dp"
       android:orientation="horizontal">
       <RadioButton
           android:id="@+id/btn_radio_arrive"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/arrive"
           android:checked="true"/>
       <RadioButton
           android:id="@+id/btn_radio_skip"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/skip"/>
       <RadioButton
           android:id="@+id/btn_radio_off"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/off"/>
       <RadioButton
           android:id="@+id/btn_radio_early"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/early"/>
       <RadioButton
           android:id="@+id/btn_radio_late"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/late"/>
   </RadioGroup>



</LinearLayout>
