<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clickable="true"
        android:onClick="btn_iv_photo"
        android:src="@drawable/cd"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/label_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/label_sno"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/label_class" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/label_sex"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="输入姓名"/>
                <EditText
                    android:id="@+id/et_sno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:hint="输入学号"/>
                <Spinner
                    android:id="@+id/sp_class_add"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">
                </Spinner>
                <Spinner
                    android:id="@+id/spinner_sex"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">
                </Spinner>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="btn_save"
            android:text="@string/btn_save"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>